--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                  alt="Wheel chair " style="height:428px; width:598px;"><br>
                  </div>
                  </section>
-                 <p class="conclusion">Maybe we should elect chidren fr US congress and
+                 <p class="conclusion">Maybe we should elect chidren for US congress and
                  get efficient solutions to problematic issues we face today !!</p>
 
                     </section>
