--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
                  <br>
                  <div>
-                 <img src="images\coolChair.jpg"
+                 <img src="images\chocolate.JPG"
                  alt="Wheel chair " style="height:428px; width:598px;"><br>
                  </div>
                  </section>
