--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                   She is still my chocolate - my sweetie !!
                   <br>
                   <div>
-                  <img src="images\chocolate.jpg"
+                  <img src="images\chocolate.JPG"
                   alt="chocolate icecream " style="height:428px; width:598px;"><br>
                   </div>
                 </p>
@@ -108,7 +108,7 @@
 
                  <br>
                  <div>
-                 <img src="images\chocolate.JPG"
+                 <img src="images\coolChair.JPG"
                  alt="Wheel chair " style="height:428px; width:598px;"><br>
                  </div>
                  </section>
