--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
              <p>      Kids can say things that teach the truth in a toffee.
-                 Even bitter truths are like toffee melting in my mouth, When
+                 Even bitter truths are like toffee melting in my mouth, when
                  my kid says it with innocent, earnest honesty !! <br>
                 <strong> TRUTH !</strong> Truth could be so elusive, until a kid,
                 says it with <em> brutal honesty. </em>
