--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                    issue that has been a plague to humans - in a sweet sentence !
                    We were having a cozy mother-daughter quality time. My daughter
                    Amgela was 2 years old and sitting in my lap, as we were looking
-                   at my birthday photos from last week. My friends had a surprise birthday party
+                   at my birthday photos from the week before. My friends had a surprise birthday party
                    for me with purple roses, cake, kid-friendly food and we had taken
                    a bunch of photos to record all the fun stuff we had done that day.
                    My daughter looked at a photo where she and her friend were sitting
