--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                    on a couch looking darling !! They were best buddies !
                    Suddenly my daughter ,Angela exclaimed, "Look mommy !! Rachel's
                    Vanilla and Iam chocolate ! " It took me a second to understand that,
-                   Angela had realized that her friend and she had different skin colors.
+                   Angela had realized that her friend had a different skin color than herself.
                    RAchel was White and my daughter was Black. But my daughter had not yet
                    heard about race . So she just referred to Rachel's WHite skin as
                    'Vanilla' and her own Black skin color as 'chocolate !'.
