--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                 Iam from India ,where being born with darker skin is an inferior thing.
                 Indians use face cremes to lighten their skin -' Fair & Lovely ' was a
                 famous brand that promised to lighten skin color in just a few weeks !
+		I understand that it was changed to "glow & lovely ".Good riddance !!
                   Lighter the skin color of a girl, lower the dowry her parents need to
                   give her husband's parents !! So a little investment in skin lightening
                   cremes is thought of as a good investment for one's daughter- even in 2020 !
