--- a/index.html
+++ b/index.html
@@ -25,32 +25,32 @@
 
 
              <p>      Kids can say things that teach the truth in a toffee.
-                 Even bitter truths are like toffee melting in my mouth, when
+                 Even bitter truths are like toffee, melting in my mouth, when
                  my kid says it with innocent, earnest honesty !! <br>
                 <strong> TRUTH !</strong> Truth could be so elusive, until a kid,
                 says it with <em> brutal honesty. </em>
                    I remember the day, my kid solved a big, divisive, destructive
                    issue that has been a plague to humans - in a sweet sentence !
                    We were having a cozy mother-daughter quality time. My daughter
-                   Amgela was 2 years old and sitting in my lap, as we were looking
-                   at my birthday photos from the week before. My friends had a surprise birthday party
-                   for me with purple roses, cake, kid-friendly food and we had taken
-                   a bunch of photos to record all the fun stuff we had done that day.
-                   My daughter looked at a photo where she and her friend were sitting
+                   Angela was 2 years old and sitting in my lap, as we were looking
+                   at my birthday photos, from the week before. My friends had a surprise birthday party
+                   for me - with purple roses, cake, kid-friendly food and we had taken,
+                   a bunch of photos, to record all the fun stuff ,that,we had done that day.
+                   My daughter looked at a photograph, where she and her friend,Rachel, were sitting
                    on a couch looking darling !! They were best buddies !
                    Suddenly my daughter ,Angela exclaimed, "Look mommy !! Rachel's
                    Vanilla and Iam chocolate ! " It took me a second to understand that,
                    Angela had realized that her friend had a different skin color than herself.
-                   RAchel was White and my daughter was Black. But my daughter had not yet
-                   heard about race . So she just referred to Rachel's WHite skin as
-                   'Vanilla' and her own Black skin color as 'chocolate !'.
-                        What an unnecessary load of trouble we have heaped up over the
+                   Rachel was White and my daughter was Asian American. But my daughter had not yet
+                   heard about race . So she just referred to Rachel's White skin, as
+                   'Vanilla' and her own dark skin color - as 'chocolate !'.
+                        What an unnecessary load of trouble we have heaped up, over the
                     years, by teaching kids to recognize skin color as a racial
                     difference ! So I decided not to tell her she was Black and not
-                    CHocolate. She was as sweet as chocolate ;so what's the harm if I
-                    let her call herself chocolate ??!! YUMMY !!!
+                    Chocolate. Anyway,she was as sweet as chocolate ; so what's the harm, if I
+		     let her call herself chocolate ??!! <br>YUMMY !!! </br> </p>
 
-                Iam from India ,where being born with darker skin is an inferior thing.
+                <p>Iam from India ,where being born with darker skin is an inferior thing.
                 Indians use face cremes to lighten their skin -' Fair & Lovely ' was a
                 famous brand that promised to lighten skin color in just a few weeks !
 		I understand that it was changed to "glow & lovely ".Good riddance !!
@@ -66,7 +66,7 @@
 
                                     Oh,boy ! what a mess !
                   My little daughter was crying and I felt such regret that she had
-                  found about, the  " Black and White " skin differences in such a rude way.
+                  found out, about, the  " Black and White " skin differences in such a rude way.
                   Gone was the sweet reference to her skin color as 'chocolate' !!
                   She is still my chocolate - my sweetie !!
                   <br>
@@ -85,22 +85,22 @@
                   So I enrolled her in a pre school, so that her teacher and I could
                   take turns answering Alice's ever -growing set of questions . Oh,boy !
                   her brain must have tons of little wheels that churn out questions
-                  incessantly !! IT was funny,though ,that I missed her little curious
+                  incessantly !! It was funny,though ,that I missed her little curious
                   voice asking me questions that morning , while,ALice enjoyed her first
                   day at pre school. She had been pleading me for weeks, by then, to let her
                   go to school, as she was a "BIG GIRL" now !! Sure enough, the little tike
-                  had an enchanting day at her pre school. Now it was my turn to see the world
+		     had an enchanting <br> "first day" </br> at her pre school. Now it was my turn to see the world
                   through ALice's eyes. For once, instead of asking questions, Alice was
                   enlightening me about all the new things she had seen and learnt at her
                   pre school. Finally, when Alice paused, to take a breath, I jumped in
                   with my questions and asked ALice, about the best thing she liked at her
                   pre school. Alice's eyes started shinig with wonder as she exclaimed,"The
                   best thing at school is my teacher's COOL CHAIR ! " I was amazed, as I
-                  realized that,ALice was referring to her paralyzed teacher's wheel chair !!
+                  realized that,ALice was referring to her paralyzed teacher's wheel chair !!<?p>
 
-                      I guess it takes a child's innocence to put things into perspective !
+                   <p>   I guess,that, it takes a child's innocence to put things into perspective !
                   I had known that her teacher was paralyzed a few years ago and felt sorry
-                  for her. And here was my dear little daughter-referring to  such a misfortune
+                  for her. And here was my dear little daughter, referring to  such a misfortune
                   as a cool thing !! I was looking at, 'what her teacher had lost' ,while Alice
                   was looking at 'what her teacher had gained' - a brand new COOL CHAIR !!
 
