--- a/index.html
+++ b/index.html
@@ -50,21 +50,21 @@
                     Chocolate. Anyway,she was as sweet as chocolate ; so what's the harm, if I
 		     let her call herself chocolate ??!! <br>YUMMY !!! </br> </p>
 
-                <p>Iam from India ,where being born with darker skin is an inferior thing.
-                Indians use face cremes to lighten their skin -' Fair & Lovely ' was a
-                famous brand that promised to lighten skin color in just a few weeks !
-		I understand that it was changed to "glow & lovely ".Good riddance !!
+                <p>Iam from India ,where, " being born with darker skin" is an inferior thing.
+			Indians use face cremes to lighten their skin -<br>' Fair & Lovely '</br> was a
+                famous brand, that promised to lighten skin color - in just a few weeks !
+	    I understand that it was changed to "glow & lovely ". <br> Good riddance !!</br>
                   Lighter the skin color of a girl, lower the dowry her parents need to
                   give her husband's parents !! So a little investment in skin lightening
-                  cremes is thought of as a good investment for one's daughter- even in 2020 !
+	 cremes is thought of as a good investment for one's daughter- even in 2020 !</p>
 
-                  So, when we took my daughter,Angela, to India, my maid told her that she
+                 <p> So, when we took my daughter,Angela, to India, my maid told her that she
                   needs to lighten her skin and started rubbing tumeric paste mixed with
                   some natural powders on Angela's skin. I was pregnant at that time and was
                    having morning sickness that day.So the maid had cajoled Angela to let her
-                   lighten Angela's skin. But my daughter's skin broke out into a rash.
+			 lighten Angela's skin. But my daughter's skin broke out into a rash.</p>
 
-                                    Oh,boy ! what a mess !
+                              <p>      Oh,boy ! what a mess !
                   My little daughter was crying and I felt such regret that she had
                   found out, about, the  " Black and White " skin differences in such a rude way.
                   Gone was the sweet reference to her skin color as 'chocolate' !!
