--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
                     years, by teaching kids to recognize skin color as a racial
                     difference ! So I decided not to tell her she was Black and not
                     Chocolate. Anyway,she was as sweet as chocolate ; so what's the harm, if I
-		     let her call herself chocolate ??!! <br>YUMMY !!! </br> </p>
+		     let her call herself chocolate ??!! <strong>YUMMY !!! </strong> </p>
 
                 <p>Iam from India ,where, " being born with darker skin" is an inferior thing.
-			Indians use face cremes to lighten their skin -<br>' Fair & Lovely '</br> was a
+			Indians use face cremes to lighten their skin -<em>' Fair & Lovely '</em> was a
                 famous brand, that promised to lighten skin color - in just a few weeks !
 	    I understand that it was changed to "glow & lovely ". <br> Good riddance !!</br>
                   Lighter the skin color of a girl, lower the dowry her parents need to
