--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                  Even bitter truths are like toffee, melting in my mouth, when
                  my kid says it with innocent, earnest honesty !! <br>
                 <strong> TRUTH !</strong> Truth could be so elusive, until a kid,
-                says it with <em> brutal honesty. </em>
+		     says it with <em> brutal honesty. </em> </br>
                    I remember the day, my kid solved a big, divisive, destructive
                    issue that has been a plague to humans - in a sweet sentence !
                    We were having a cozy mother-daughter quality time. My daughter
