--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                    I remember the day, my kid solved a big, divisive, destructive
                    issue that has been a plague to humans - in a sweet sentence !
                    We were having a cozy mother-daughter quality time. My daughter
-                   Angela was 2 years old and sitting in my lap, as we were looking
+                   Angela was two years old and sitting in my lap, as we were looking
                    at my birthday photos, from the week before. My friends had a surprise birthday party
                    for me - with purple roses, cake, kid-friendly food and we had taken,
                    a bunch of photos, to record all the fun stuff ,that,we had done that day.
