--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <p>Iam from India ,where, " being born with darker skin" is an inferior thing.
 			Indians use face cremes to lighten their skin -<em>' Fair & Lovely '</em> was a
                 famous brand, that promised to lighten skin color - in just a few weeks !
-	    I understand that it was changed to "glow & lovely ". <br> Good riddance !!</br>
+	    I understand that it was changed to "glow & lovely ". <em> Good riddance !!</em>
                   Lighter the skin color of a girl, lower the dowry her parents need to
                   give her husband's parents !! So a little investment in skin lightening
 	 cremes is thought of as a good investment for one's daughter- even in 2020 !</p>
