--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                   My little daughter was crying and I felt such regret that she had
                   found out, about, the  " Black and White " skin differences in such a rude way.
                   Gone was the sweet reference to her skin color as 'chocolate' !!
-                  She is still my chocolate - my sweetie !!
+				      <strong> She is still my chocolate - my sweetie !! </strong>
                   <br>
                   <div>
                   <img src="images\chocolate.JPG"
