--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
         </header>
             <main>
             <article>
+		    <br>
+                  <div>
+                  <img src="images\crispyForms.JPG"
+                  alt="chocolate icecream " style="height:428px; width:598px;"><br>
+                  </div>
                  <section>
                  <a name="Color confusion"></a>
                    <h2>Color confusion </h2>
