--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
     <body >
        <header>
-            <h1> Kid Kittles </h1>
+            <h1> Kid's Kittles </h1>
                <p1>Hannah NP  Mungamuri</p1>
 	    <nav>
 		<ul>
