--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 
 
-             <p>      Kids can say things that teach the truth in a toffee.
+             <p>      Kids  say things that teach the truth in a toffee.
                  Even bitter truths are like toffee, melting in my mouth, when
                  my kid says it with innocent, earnest honesty !! <br>
                 <strong> TRUTH !</strong> Truth could be so elusive, until a kid,
