--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
     <body >
        <header>
-            <h1> Kid's Kittles </h1>
+            <h1> Kid Kittles </h1>
                <p1>Hannah NP  Mungamuri</p1>
 	    <nav>
 		<ul>
@@ -17,12 +17,10 @@
         </header>
             <main>
             <article>
-		<!    <br>
-                  <div>
-                  <img src="images\1a1a2noModuleNamedCrispyForms.JPG"
-                  alt="chocolate icecream " style="height:428px; width:598px;"><br>
-                  </div>
-		    </br>-->
+		<!    <br>                   <div> -->
+                 <! <img src="images\1a1a2noModuleNamedCrispyForms.JPG" -->
+               <!   alt="chocolate icecream " style="height:428px; width:598px;"><br> -->
+		<! </div>  		    </br>--> 
                  <section>
                  <a name="Color confusion"></a>
                    <h2>Color confusion </h2>
@@ -30,7 +28,7 @@
 
 
 
-             <p>      Kids  say things that teach the truth in a toffee.
+             <p>      Kids can say things that teach the truth in a toffee.
                  Even bitter truths are like toffee, melting in my mouth, when
                  my kid says it with innocent, earnest honesty !! <br>
                 <strong> TRUTH !</strong> Truth could be so elusive, until a kid,
