--- a/index.html
+++ b/index.html
@@ -21,9 +21,12 @@
                  <section>
                  <a name="Color confusion"></a>
                    <h2>Color confusion </h2>
-
-
-
+<br>
+<div>
+                  <img src="images\chocolate.JPG"
+                  alt="chocolate icecream " style="height:428px; width:598px;"><br>
+                  </div>
+			 </br>
 
              <p>      Kids can say things that teach the truth in a toffee.
                  Even bitter truths are like toffee, melting in my mouth, when
