--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                    <h2>Color confusion </h2>
 <br>
 <div>
-                  <img src="images\https://hannahmoses.github.io/daughter-sDay2020/"
+                  <img src="images\AngelaMungamuriParentsIMG_1797.MOV"
                   alt="chocolate icecream " style="height:428px; width:598px;"><br>
                   </div>
 			 </br>
