--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                   alt="chocolate icecream " style="height:428px; width:598px;"><br>
                   </div>
 			 </br>
-
+		    <p> VIDEO taken on 2020 oct 25 sunday </p>
              <p>      Kids can say things that teach the truth in a toffee.
                  Even bitter truths are like toffee, melting in my mouth, when
                  my kid says it with innocent, earnest honesty !! <br>
