--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
                    <h2>Color confusion </h2>
 <br>
 <div>
-                  <img src="images\AngelaMungamuriParentsIMG_1797.MOV"
-                  alt="chocolate icecream " style="height:428px; width:598px;"><br>
+                  <video width="320" height="240" controls>
+  <source src="ParentsOfAngela2020oct25IMG_1790.MOV" type="video/MOV">
+   alt=" Your browser does not support the 63.1 MB video tag."
+</video>
                   </div>
 			 </br>
 		    <p> VIDEO taken on 2020 oct 25 sunday </p>
