--- a/index.html
+++ b/index.html
@@ -23,10 +23,9 @@
                    <h2>Color confusion </h2>
 <br>
 <div>
-                  <video width="320" height="240" controls>
-  <source src="ParentsOfAngela2020oct25IMG_1790.MOV" type="video/MOV">
-   alt=" Your browser does not support the 63.1 MB video tag."
-</video>
+               
+	<video controls="controls" width="800" height="600" 
+       name="Video Name" src="images/1gParentsOfAngela2020oct25IMG_1790_Trim"></video>
                   </div>
 			 </br>
 		    <p> VIDEO taken on 2020 oct 25 sunday </p>
