--- a/index.html
+++ b/index.html
@@ -24,8 +24,11 @@
 <br>
 <div>
                
-	<video controls="controls" width="800" height="600" 
-       name="Video Name" src="https://www.youtube.com/watch?v=geKbGLBmd_0"></video>
+	<video width="320" height="240" controls>
+  <source src="https://www.youtube.com/watch?v=geKbGLBmd_0">
+   alt=" Your browser does not support the 63.1 MB video tag."
+		
+</video>
                   </div>
 			 </br>
 		    <p> VIDEO taken on 2020 oct 25 sunday </p>
