--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
        class="video-stream" 
        x-webkit-airplay="allow" 
        data-youtube-id="N9oxmRT2YWw" 
-       src="https://www.youtube.com/watch?v=geKbGLBmd_0/videoplayback?sparams=id%2Cexpire%2Cip%2Cipbits%2Citag%2Cratebypass%2Coc%3AU0hPRVRMVV9FSkNOOV9MRllD&amp;itag=43&amp;ipbits=0&amp;signature=D2BCBE2F115E68C5FF97673F1D797F3C3E3BFB99.59252109C7D2B995A8D51A461FF9A6264879948E&amp;sver=3&amp;ratebypass=yes&amp;expire=1300417200&amp;key=yt1&amp;ip=0.0.0.0&amp;id=37da319914f6616c"></video>
-	
+	       
+       src="https://www.youtube.com/watch?v=geKbGLBmd_0&html5=true"
                   </div>
 			 </br>
 		    <p> VIDEO taken on 2020 oct 25 sunday </p>
