--- a/index.html
+++ b/index.html
@@ -24,12 +24,7 @@
 <br>
 <div>
                
-	<video controls="controls" 
-       class="video-stream" 
-       x-webkit-airplay="allow" 
-       data-youtube-id="N9oxmRT2YWw" 
-	       
-       src="https://www.youtube.com/watch?v=geKbGLBmd_0&html5=true"
+	<iframe width="420" height="315" src="https://www.youtube.com/embed/geKbGLBmd_0" frameborder="0" allowfullscreen></iframe>
                   </div>
 			 </br>
 		    <p> VIDEO taken on 2020 oct 25 sunday </p>
@@ -133,4 +128,4 @@ was looking at <strong>'what her teacher had gained'</strong> - a brand new COOL
         <footer>
             <p> Copyright pending by: &copy Hannah Mungamuri (hannahmoses612@gmail.com) </p>
           </footer>
-&html5=True
+
