--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                   with my questions and asked Alice, about the best thing she liked at her
                   pre school. Alice's eyes started shining with wonder, as she exclaimed,"The
                   best thing at school is my teacher's COOL CHAIR ! " I was amazed, as I
-                  realized that,ALice was referring to her paralyzed teacher's wheel chair !!<?p>
+                  realized that,Alice was referring to her paralyzed teacher's wheel chair !!<?p>
 
                    <p>   I guess,that, it takes a child's innocence to put things into perspective !
                   Iam glad my American pre school director put things into perspective, and sent me to
