--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
 
                    <p>   I guess,that, it takes a child's innocence to put things into perspective !
                   Iam glad my American pre school director put things into perspective, and sent me to
-                  hospital when I had started miscarrying Alice,a few years ago. This kind and caring White
+                  hospital when I had started miscarrying Alice,a few years ago. This <em><strong> 'kind and caring"</strong></em> White
                   American lady,also gave me leave to stay home until the baby stopped bleeding in my womb,
                   even though, there were others ,who told me to abort Alice, in order to avoid birth defects
-                   sue to heavy bleeding of the foetus in my womb ! Now, I can't even imagine my life without 
+                   due to heavy bleeding of the foetus in my womb ! Now, I can't even imagine my life without 
 Alice. <br> <br> <strong>POSITIVE PROGRESS IS IN THE PERSPECTIVE !!</strong> Alice had made me progress in a positive direction,
                    with her 'COOL CHAIR' remark !!
                   I had known that her teacher was paralyzed a few years ago and felt sorry
