--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
 
                    <p>   I guess,that, it takes a child's innocence to put things into perspective !
                   Iam glad my American pre school director put things into perspective, and sent me to
-                  hospital when I had started miscarrying Alice,a few years ago. This <em><strong> 'kind and caring"</strong></em> White
+                  hospital when I had started miscarrying Alice,a few years ago. This <em><strong> 'kind and caring,White
+                  American lady'</strong></em> White
                   American lady,also gave me leave to stay home until the baby stopped bleeding in my womb,
                   even though, there were others ,who told me to abort Alice, in order to avoid birth defects
                    due to heavy bleeding of the foetus in my womb ! Now, I can't even imagine my life without 
