--- a/index.html
+++ b/index.html
@@ -106,10 +106,9 @@
                    <p>   I guess,that, it takes a child's innocence to put things into perspective !
                   Iam glad my American pre school director put things into perspective, and sent me to
                   hospital when I had started miscarrying Alice,a few years ago. This <em><strong> 'kind and caring,White
-                  American lady'</strong></em> White
-                  American lady,also gave me leave to stay home until the baby stopped bleeding in my womb,
-                  even though, there were others ,who told me to abort Alice, in order to avoid birth defects
-                   due to heavy bleeding of the foetus in my womb ! Now, I can't even imagine my life without 
+                  American lady,'</strong></em> had also given me, leave , to stay home - until the baby stopped bleeding in my womb.
+                  There were others ,who told me to abort Alice, in order to avoid birth defects,
+due to heavy bleeding of the foetus in my womb !Iam <strong>s...o glad, </strong>that I had not accepted thier perspective. Now, I can't even imagine my life without 
 Alice. <br> <br> <strong>POSITIVE PROGRESS IS IN THE PERSPECTIVE !!</strong> Alice had made me progress in a positive direction,
                    with her 'COOL CHAIR' remark !!
                   I had known that her teacher was paralyzed a few years ago and felt sorry
